--- a/assets/style.css
+++ b/assets/style.css
@@ -4,3 +4,50 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
+.container{
+    height: 100vh;
+    background-color: #121212;
+}
+
+.cd-wrapper{
+    width: 80%;
+    height: 100vh;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 50px;
+}
+
+.cd-card{
+    width: 250px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 5px;
+    height: 300px;
+    border: 1px solid #020202;
+    background-color: #222222;
+    color: lightgrey;
+    margin: 5px;
+}
+
+.poster{
+    max-width: 190px;
+}
+
+.title{
+    font-style: italic;
+}
+
+.author{
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.year{
+    font-weight: bold;
+}
