--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,10 @@
 
 .container{
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
     background-color: #121212;
 }
 
@@ -35,6 +39,10 @@
     margin: 5px;
 }
 
+.cd-card:hover{
+    color: #1dd05d;
+}
+
 .poster{
     max-width: 190px;
 }
@@ -48,6 +56,14 @@
     font-size: 18px;
 }
 
-.year{
-    font-weight: bold;
+.genre, .year{
+    font-size: 12px;
+}
+
+.select-container{
+    width: 300px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    color: lightgrey;
 }
